--- a/index.html
+++ b/index.html
@@ -10,225 +10,139 @@
     <title>Pressfeed</title>
 </head>
 <body>
-    <section class="section--books">
-        <div class="section__item section__first-item">
-            <h2 class="section__item-title">
-                <a 
-                    href="#" 
-                    class="section__item-title--link">
-                Pressfeed</a> — первый в России <br>
+    <section class="books">
+        <div class="books__item books__item--first">
+            <h2 class="books__title">
+                <a href="#" class="books__title-link">Pressfeed</a> — первый в России <br>
                 сервис журналистских запросов
             </h2>
 
-            <p class="section__item-text">
-                <b class="item-text--bold">
-                    Журналистам 
-                </b>- материалы для публикаций. <br>
-                <b class="item-text--bold">
-                    Экспертам
-                </b> - упоминания в СМИ.
+            <p class="books__text">
+                <b class="books__text-bold">
+                    Журналистам</b> - материалы для публикаций. <br>
+
+                <b class="books__text-bold">
+                    Экспертам</b> - упоминания в СМИ.
             </p>
 
-            <div class="section__item-buttons">
-                <button class="section__item-btn">
-                    Журналистам
-                </button>
-
-                <button class="section__item-btn">
-                    Экспертам и пиарщикам
-                </button>
+            <div class="books__buttons">
+                <button class="books__btn">Журналистам</button>
+                <button class="books__btn">Экспертам и пиарщикам</button>
             </div>
         </div>
 
-        <div class="section__item section__second-item">
-            <h2 class="section__item-title">
+        <div class="books__item books__item--second">
+            <h2 class="books__title">
                 Как бесплатно продвигать бизнес <br>
-                 с помощью публикаций в СМИ
+                с помощью публикаций в СМИ
             </h2>
 
-            <p class="section__item-text">
+            <p class="books__text">
                 10 кейсов о росте трафика, <br>
                 продаж, продвижении
             </p>
 
-            <div class="section__item-buttons">
-                <button class="section__item-btn">
-                    Получить книгу бесплатно
-                </button>
+            <div class="books__buttons">
+                <button class="books__btn">Получить книгу бесплатно</button>
             </div>
         </div>
     </section>
 
-    <header class="header header__menu">
-
-        <button class="menu__burger-btn">
+    <header class="header">
+        <button class="header__burger">
             <span></span>
             <span></span>
             <span></span>
         </button>
 
         <a href="./index.html" class="header__title">
-                pressfeed. 
-            <p class="header__title--link">журнал</p>
+            pressfeed.
+            <p class="header__title-sub">журнал</p>
         </a>
 
-        <div class="search__bar">
+        <div class="search">
             <input 
                 type="text"
                 placeholder="Поиск по журналу"
                 class="search__input"
                 maxlength="30">
-
             <button class="search__btn">
-                <img src="./img/search-icon.png">
+                <img src="./img/search-icon.png" alt="Поиск">
             </button>
         </div>
 
-        <div class="header__web-socials">
-
-            <button class="web__social-btn">
-                <img src="./img/social-tg-icon.png">
+        <div class="socials">
+            <button class="socials__btn">
+                <img src="./img/social-tg-icon.png" alt="Telegram">
             </button>
 
-            <button class="web__social-btn">
-                <img src="./img/social-fb-icon.png">
+            <button class="socials__btn">
+                <img src="./img/social-fb-icon.png" alt="Facebook">
             </button>
 
-            <button class="web__social-btn">
-                <img src="./img/social-vk-icon.png">
+            <button class="socials__btn">
+                <img src="./img/social-vk-icon.png" alt="VK">
             </button>
-
         </div>
 
-        <button class="header__public-btn">
-            Опубликовать статью
-        </button>
+        <button class="header__publish">Опубликовать статью</button>
 
-        <button class="search__btn-mobile">
-            <img src="./img/search-mobile-icon.png" alt="">
+        <button class="header__search-mobile">
+            <img src="./img/search-mobile-icon.png" alt="Search">
         </button>
 
         <button class="header__account-btn">
-
-            <div class="account__img--circle"></div>
-            
-            <img 
-                src="./img/account-bottom-arrow.png"
-                class="account__bottom-arrow">
+            <div class="account__avatar"></div>
+            <img src="./img/account-bottom-arrow.png" 
+                class="account__arrow" 
+                alt="Аватар аккаунта">
         </button>
     </header>
 
-    <section class="section__menu-bar">
-        <ul class="menu__list"> 
-      
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    PR
-                </a>
+    <section class="menu-bar">
+        <ul class="menu-bar__list"> 
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">PR</a>
             </li>
-
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Медиа
-                </a>
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">Медиа</a>
             </li>
-
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Контент-маркетинг
-                </a>
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">Контент-маркетинг</a>
             </li>
-
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Кейсы
-                </a>
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">Кейсы</a>
             </li>
-
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    How to
-                </a>
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">How to</a>
             </li>
-
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Подкасты
-                </a>
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">Подкасты</a>
             </li>
-
-            <li class="menu__item menu__item--hidden">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    SMM
-                </a>
+            <li class="menu-bar__item menu-bar__item--hidden">
+                <a href="#" class="menu-bar__link">SMM</a>
             </li>
-
-            <li class="menu__item menu__item--hidden">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Что пишут
-                </a>
+            <li class="menu-bar__item menu-bar__item--hidden">
+                <a href="#" class="menu-bar__link">Что пишут</a>
             </li>
-
-            <li class="menu__item">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Медиа
-                </a>
+            <li class="menu-bar__item">
+                <a href="#" class="menu-bar__link">Медиа</a>
             </li>
-
-            <li class="menu__item menu__item--hidden">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Контент-маркетинг
-                </a>
+            <li class="menu-bar__item menu-bar__item--hidden">
+                <a href="#" class="menu-bar__link">Контент-маркетинг</a>
             </li>
-
-            <li class="menu__item menu__item--hidden">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Кейсы
-                </a>
+            <li class="menu-bar__item menu-bar__item--hidden">
+                <a href="#" class="menu-bar__link">Кейсы</a>
             </li>
-
-            <li class="menu__item menu__item--hidden">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Аналитика
-                </a>
+            <li class="menu-bar__item menu-bar__item--hidden">
+                <a href="#" class="menu-bar__link">Аналитика</a>
             </li>
-
-            <li class="menu__item menu__item--hidden">
-                <a 
-                    href="#"
-                    class="menu__item--link">
-                    Что пишут
-                </a>
+            <li class="menu-bar__item menu-bar__item--hidden">
+                <a href="#" class="menu-bar__link">Что пишут</a>
             </li>
         </ul>
 
-        <span class="menu__see-more-text">
-            показать еще 6
-        </span>
+        <span class="menu-bar__more">показать еще 6</span>
     </section>
 
     <main class="main">
