--- a/index.html
+++ b/index.html
@@ -882,36 +882,6 @@
                     </p>
                 </div>
 
-                <button class="all__materials-div">
-                    Все материалы журнала Pressfeed
-                </button>
-
-                <div class="news__registration-part hiddened-in-mobile">
-                    <div class="news__registration-part-inner">
-                        <h2 class="registration__title">
-                            Кейсы, тренды, инструменты в крупнейшем <br>
-                            сообществе экспертов и пиарщиков
-                        </h2>
-
-                        <p class="registration__text">
-                            Все самое интересное в одном письме!
-                        </p>
-
-                        <div class="registration__input-part">
-                            <div class="email__input-div">
-                                <input 
-                                    type="email"
-                                    placeholder="E-mail"
-                                    class="email__input">
-                            </div>
-                                
-                            <button class="subscribe__btn">
-                                Подписаться
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="news__item appeared--mobile">
                     <div class="news__date-bar">
                         <p class="date__text">
@@ -1028,6 +998,40 @@
                     </div>
                 </div>
             </div>
+
+            <div class="news__last-part">
+                    <button class="all__materials-div">
+                        Все материалы журнала Pressfeed
+                    </button>
+
+                    <div class="news__registration-part hiddened-in-mobile">
+                        <div class="news__registration-part-inner">
+                            <h2 class="registration__title">
+                                Кейсы, тренды, инструменты в крупнейшем <br>
+                                сообществе экспертов и пиарщиков
+                            </h2>
+
+                            <p class="registration__text">
+                                Все самое интересное в одном письме!
+                            </p>
+
+                            <div class="registration__input-part">
+                                <div class="email__input-div">
+                                    <input 
+                                        type="email"
+                                        placeholder="E-mail"
+                                        class="email__input"
+                                        maxlength="35">
+                                </div>
+                                    
+                                <button class="subscribe__btn">
+                                    Подписаться
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+
         </section>
 
         <div class="main__comment-open-bar">
@@ -1828,6 +1832,7 @@
                         продвижения в социальных сетях
                     </a>
                 </div>
+
         </section>
     </main>
 
